--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
         - name: Install dependencies
           run: npm install
         - name: Run ESLint
-          run: npx eslint .
+          run: npx eslint
 
 
